--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,3 @@
-Version: 4.7.1
-  - Fixxed issue with video lightbox
-
 Version: 4.7.0
   - Updated Bootstrap to version 5.1.3
   - Updated all outdated third party vendor libraries to their latest versions
@@ -45,18 +42,22 @@ Version: 4.0.0
 Version: 3.0.0
   - Initial release with Bootstrap v5.0 Beta 1
 
-Version: 2.2.0
+Version: 2.3.0
   - Updated Bootstrap to version 4.5.3
   - Updated all outdated third party vendor libraries to their latest versions
   - Updated the PHP Email Form to v2.3
   - Other small fixes and improvements
 
-Version: 2.1.0
+Version: 2.2.0
   - Updated Bootstrap to version 4.5.0
   - Updated the PHP Email Form library to version 2.0 with reCaptcha support
+  - Aded inner-page.html tempalte
   - Added smooth scroll on page load with hash links in the url
   - Updated all outdated third party vendor libraries to their latest versions
   - Other small fixes and improvements
+  
+Version: 2.1.0
+  - Updated the hero waves effect to use native CSS animations instead of third party libraries
   
 Version: 2.0.0
   - The template was rebuilt from scratch with the latest Bootstrap version (4.4.1)
@@ -64,4 +65,4 @@ Version: 2.0.0
   - Added NodeJS NPM Development version (Pro unlimited & Membership members)
   
 Version: 1.0.0
-- Initial Release
+  - Initial Release
